test/analyzer/input_programs/invalid_programs/program26.tea
g := (x, y, z) ->
  x * y * z
end

# all fine and dandy since the appropriate
# number of args are given
g(1,2,3)

# oh noes!! too few args
g(1)